<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_anchorGravity="bottom|center">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="32sp" />

            <Button
                android:id="@+id/button_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/test" />
        </android.support.design.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/text_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resolution" />

        <Button
            android:id="@+id/button_get_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_get_resolution"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/checkbox_selections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_selections" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_1" />

            <CheckBox
                android:id="@+id/checkbox_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_2" />
        </LinearLayout>

        <TextView
            android:id="@+id/radio_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_selection" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_1" />

            <RadioButton
                android:id="@+id/radiobutton_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_2" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input" />

            <AutoCompleteTextView
                android:id="@+id/input_auto_complete"
                android:layout_width="75pt"
                android:layout_height="wrap_content"
                android:layout_marginRight="-384dp"
                android:layout_toLeftOf="@id/text_input" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/submit" />
</android.support.design.widget.CoordinatorLayout>
